editing, more logic, redesign

--- a/src/index.html
+++ b/src/index.html
@@ -2,13 +2,15 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>MyBlog</title>
+  <title>Aziz Yokubjonov</title>
   <base href="/">
-  <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,600,600i&display=swap" rel="stylesheet">
+
 
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <meta name="google-site-verification" content="tVfKawXpkimuK1Y7Xv3kPzENF8aApBUaUfZF2OUOlOw" />
 </head>
 <body>
   <blog-root></blog-root>
