fix title discrepancy on navigation

--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Aziz Yokubjonov</title>
+  <title>Aziz Yokubjonov's blog</title>
   <base href="/">
   <link href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,600,600i&display=swap" rel="stylesheet">
 
