--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
 
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="icon" type="image/png" href="assets/favicon.png">
   <meta name="google-site-verification" content="dE35uNUG6pi4RKvnpziqDWp-9Y7xau5wOZw2Ve-R7Ts" />
 </head>
 <body>
